Fixed the nav on mobile and links

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -68,13 +68,13 @@ a { color:$secondaryColor;}
 
 section{padding:20px; margin-bottom:20px;box-sizing: border-box; }
 
-.about{ background-color:$gray; }
 
 .border{ 
 	// border :solid 2px #f0f0f0; margin:30px; padding:20px;
 	background-image: url(../img/leafBG.png); background-repeat: no-repeat; 
 	background-position: 70% 40px; background-color: white; 
 }
+.anchor{display:block}
 @include breakpoint(small down){
 	.border{ border-left:solid 0 #f0f0f0; border-right:solid 0 #f0f0f0;}
 }
@@ -102,6 +102,7 @@ section{padding:20px; margin-bottom:20px;box-sizing: border-box; }
 
 header{
 	position:fixed; top:0; width:100%;
+	box-shadow: 0 0 4px rgba(0,0,0,.14), 0 4px 8px rgba(0,0,0,.28);
 
 	nav{
 		text-align: right; padding:0; width:100%; background-color: white;
@@ -116,25 +117,20 @@ header{
 	}
 
 	.logo{ width:75px; float:left; position: absolute; top:5px; left:20px;}
-	
 
 }
-
-
 
 
 .welcome{
 
 	background-position-x: 50%;
 	background-position-y: 0%;
-
 	text-align:center;
 	background-image: url(../img/desk_medium.jpg);
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;	
-	
 
 	height:500px;
 	padding:0;
@@ -144,33 +140,25 @@ header{
 		width:100%; height:100%;
 		div{ 
 			text-align: center;
-			padding:80px 0 50px ;
+			padding:80px 0 50px;
 			img{ @include fadesIn; margin-bottom:50px; width:300px; height:60px; margin:0; }
 		}
 	}
 	
-
-	@include breakpoint(small only) {
-		
-	}
-
 	@include breakpoint(large up) { 
-		
 		background-image: url(../img/desk_large.jpg); 
 		height:500px;
-
 	}
+
 	@include breakpoint(xlarge up){ 	
 		background-image: url(../img/desk_xlarge.jpg); 
-
 	}
 
 }
 
 
+#mobileMenu{display: none; background-color: transparent;}
 
-
-#mobileMenu{display: none;}
 @include breakpoint(small only) {
 
 	#mobileMenu{
@@ -180,47 +168,79 @@ header{
 		text-align: center;
 	}
 
-	h2 {text-shadow:none}
 	header {
-		position: absolute; 
-		nav{ background-color: transparent; display: none;}
+		position: static;
+		box-shadow: none;
+
+		.outerNav{ 
+			visibility: hidden;
+			max-height: 0;
+			overflow: hidden;
+			background-clip: border-box;
+
+			-webkit-transition: max-height 0.3s;
+			-moz-transition: max-height 0.3s;
+			transition: max-height 0.3s;
+		}
+		.wrapper{visibility: hidden;}
+		nav{ 
+			background-color: transparent; 
+			text-align: center; 
+			margin:auto;
+			a{color:white; margin:0; display: block; }
+		}
 		.logo {display: none;}
-		nav a{color:white; margin:0; }
 	}
 	
-	.welcome{margin-top:0;}
+	.welcome{margin-top:0; background-attachment: scroll;}
 	.welcome {
-		.welcomeBG div img, h2 { width:70%; margin:auto}
+		.welcomeBG div img, h2 { width:80%; margin:auto }
+		.welcomeBG div{ padding:50px 0 30px; }
 	}
 
 	header.extended{
-		position: static; float:left;
-		nav {
-			display: block; text-align: center; margin:auto;
-			a { display: block; }
-		}
-		#mobileMenu{border-top: solid 1px white; margin-bottom: 28px; margin-top: 10px;}
 
+		.outerNav{ 
+			max-height: 1000px;
+			visibility: visible;
+		}
+		.wrapper{visibility: visible;}
+		#mobileMenu{border-top: solid 1px white; margin-top: 10px;}
 	}
 }
 
 
+.services{
+	margin:100px 0;
+}
+
+.story{ 
+	padding-top:100px;
+	padding-bottom:100px;
+	background-color:$gray; 
+}
 
 .work{
+	
 	section{ @include fadesIn; }
 }
 
 .clients{
-	 @include fadesIn;
-	 padding-bottom:70px; 
+	margin:100px 0;
+	@include fadesIn;
+	padding-bottom:70px; 
 }
 
 .contact{
-	width:100%; background-color: $secondaryColor; height: 300px; color:white;
-	margin-bottom: 0px;
+	padding-top:100px;
+	padding-bottom:100px;
+	width:100%; background-color: $secondaryColor; 
+	height: 300px; 
+	color:white;
+	margin-bottom: 0;
+	// margin-bottom: 0px;
 	a , h3{color:white}
 	@include gradient;
-
 }
 
 footer{ padding-bottom:30px; }
